--- a/examples/src/index.css
+++ b/examples/src/index.css
@@ -49,83 +49,11 @@ h6 {
 a {
   color: inherit;
   text-decoration: none;
+  white-space: nowrap;
 }
-a:hover,
-a:focus {
+a:hover {
   outline: 0;
   text-decoration: underline;
-}
-
-/*
-  ==============================
-  Misc.
-  ==============================
-*/
-
-header {
-  margin-bottom: 2em;
-}
-footer {
-  margin-top: 2em;
-}
-.icon {
-  font-size: 64px;
-  height: 64px;
-  line-height: 64px;
-  margin: 0 auto 0.5em;
-  position: relative;
-  width: 64px;
-}
-h1 {
-  display: inline;
-  font-size: 18px;
-  font-weight: 500;
-  letter-spacing: -0.025em;
-  margin: 0;
-}
-code {
-  background-color: rgba(0, 0, 0, 0.09);
-  border-radius: 3px;
-  color: #091e42;
-  display: inline-block;
-  font-family: 'Monaco', monospace;
-  font-size: 0.85em;
-  line-height: 1.4;
-  padding: 1px 5px;
-}
-
-/*
-  ==============================
-  BIG BUTTON
-  ==============================
-*/
-button {
-  -ms-touch-action: manipulation; /* IE10  */
-  touch-action: manipulation;
-  align-items: center;
-  background-color: white;
-  background: linear-gradient(to bottom, white, #fafbfc);
-  border-radius: 5px;
-  border: 0;
-  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25), 0 1px 1px rgba(0, 0, 0, 0.1);
-  box-sizing: border-box;
-  cursor: pointer;
-  display: flex;
-  font-size: 24px;
-  font-weight: 500;
-  justify-content: center;
-  outline: 0;
-  padding: 20px;
-  position: relative;
-  width: 100%;
-}
-button:hover {
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25), 0 1px 1px rgba(0, 0, 0, 0.1);
-  transform: scale(1.01);
-}
-button:active {
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2), 0 1px 1px rgba(0, 0, 0, 0.1);
-  transform: scale(0.99);
 }
 
 /*
